[gd_scene load_steps=6 format=3 uid="uid://cnwlcdqhf7rvq"]

[ext_resource type="Script" path="res://scripts/inflatable.gd" id="1_8ky1c"]
[ext_resource type="Texture2D" uid="uid://bx1vaoyby07pv" path="res://art/CharacterParts/wiggleman.png" id="2_xa0on"]
[ext_resource type="AudioStream" uid="uid://bqbk6k81rb33i" path="res://audio/Objects/Inflatable/A_Inflatable_04.wav" id="3_0ayhi"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pbt1l"]
radius = 21.0
height = 138.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8rglb"]
radius = 354.013

[node name="Iflatable" type="RigidBody2D"]
gravity_scale = 0.0
script = ExtResource("1_8ky1c")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.16399, 0.16399)
texture = ExtResource("2_xa0on")

[node name="InflatableCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_pbt1l")

[node name="InflatableSound" type="Area2D" parent="."]

[node name="InflatableSoundCollision" type="CollisionShape2D" parent="InflatableSound"]
shape = SubResource("CircleShape2D_8rglb")

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 90.0
one_shot = true
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_0ayhi")
volume_db = 8.0
autoplay = true

[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
